chainlit/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-chatbot-chainlit
  namespace: kubernetes-namespace-template
  labels:
    app: ai-chatbot-chainlit
    version: v${Build.BuildNumber}
    environment: test
    owner: owner-template
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ai-chatbot-chainlit
  template:
    metadata:
      labels:
        app: ai-chatbot-chainlit
        version: v${Build.BuildNumber}
        environment: test
        owner: owner-template
    spec:
      containers:
        - name: chainlit
          image: 674877602397.dkr.ecr.eu-central-1.amazonaws.com/ai-chatbot-chainlit:${Build.BuildNumber}
          command: [ "python", "-m", "chainlit", "run", "deployment_prod.py", "-h", "--port", "8080" ]
          resources:
            requests:
              memory: "3000Mi"
              cpu: "100m"
            limits:
              memory: "14Gi"
              cpu: "3500m"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: cache-volume
              mountPath: /cache
      volumes:
        - name: cache-volume
          persistentVolumeClaim:
            claimName: ai-hackathon-cache
