chainlit/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-chatbot-chainlit
  namespace: kubernetes-namespace-template
  labels:
    app: ai-chatbot-chainlit
    version: v${Build.BuildNumber}
    environment: test
    owner: owner-template
    scrape-service-metrics: "true"
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: ai-chatbot-chainlit
---
apiVersion: v1
kind: Service
metadata:
  name: ai-chatbot-chainlit-dev
  namespace: kubernetes-namespace-template
  labels:
    app: ai-chatbot-chainlit-dev
    version: v${Build.BuildNumber}
    environment: test
    owner: owner-template
    scrape-service-metrics: "true"
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: ai-chatbot-chainlit-dev
